--- a/Trials.ipynb
+++ b/Trials.ipynb
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "f35019fd",
+   "id": "26b682aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,8 +42,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "n_points = 1000\n",
+    "sobol_sequence = sobol.sample(dimension=22, n_points=n_points)\n",
     "sobol_sequence[:,1:] = sobol_sequence[:,1:]*2 -1\n",
-    "start = np.array_split(sobol_sequence, sobol_sequence.shape[0])"
+    "start = np.array_split(sobol_sequence, n_points)"
    ]
   },
   {
