--- a/Results_b22_0.ipynb
+++ b/Results_b22_0.ipynb
@@ -24,12 +24,12 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "68ccc8bd",
+   "id": "6c3a21ea",
    "metadata": {},
    "outputs": [],
    "source": [
     "datadir = os.getcwd()\n",
-    "with open('data.pkl','rb') as f:\n",
+    "with open('untitled folder/data.pkl','rb') as f:\n",
     "    temp = pickle.load(f)"
    ]
   },
@@ -65,6 +65,24 @@
     "η = pd.DataFrame([i.x[1] for i in θs])\n",
     "b11 = pd.DataFrame([i.x[2] for i in θs])\n",
     "b21 = pd.DataFrame([i.x[3] for i in θs])\n",
+    "As11 = pd.DataFrame([i.x[4] for i in θs])\n",
+    "As12 = pd.DataFrame([i.x[5] for i in θs])\n",
+    "As13 = pd.DataFrame([i.x[6] for i in θs])\n",
+    "As14 = pd.DataFrame([i.x[7] for i in θs])\n",
+    "As21 = pd.DataFrame([i.x[8] for i in θs])\n",
+    "As22 = pd.DataFrame([i.x[9] for i in θs])\n",
+    "As23 = pd.DataFrame([i.x[10] for i in θs])\n",
+    "As24 = pd.DataFrame([i.x[11] for i in θs])\n",
+    "As31 = pd.DataFrame([i.x[12] for i in θs])\n",
+    "As32 = pd.DataFrame([i.x[13] for i in θs])\n",
+    "As33 = pd.DataFrame([i.x[14] for i in θs])\n",
+    "As34 = pd.DataFrame([i.x[15] for i in θs])\n",
+    "Bs11 = pd.DataFrame([i.x[16] for i in θs])\n",
+    "Bs21 = pd.DataFrame([i.x[17] for i in θs])\n",
+    "Bs22 = pd.DataFrame([i.x[18] for i in θs])\n",
+    "Bs31 = pd.DataFrame([i.x[19] for i in θs])\n",
+    "Bs32 = pd.DataFrame([i.x[20] for i in θs])\n",
+    "Bs33 = pd.DataFrame([i.x[21] for i in θs])\n",
     "stable = pd.DataFrame([np.max(np.linalg.eig(np.array([i.x[4:7],i.x[8:11],i.x[12:15]]))[0])<1 for i in θs])\n",
     "hess = pd.DataFrame([np.all(np.linalg.eigvals(i.hess_inv.todense()) >=0) for i in θs])"
    ]
@@ -358,6 +376,14 @@
     "res = res.loc[res['hess']==True]\n",
     "res.sort_values(by = 'll',ascending = True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "839e19cd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
