--- a/Trials.ipynb
+++ b/Trials.ipynb
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "26b682aa",
+   "id": "7d780d34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,15 +37,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "id": "8e06c887",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "n_points = 1000\n",
     "sobol_sequence = sobol.sample(dimension=22, n_points=n_points)\n",
     "sobol_sequence[:,1:] = sobol_sequence[:,1:]*2 -1\n",
-    "start = np.array_split(sobol_sequence, n_points)"
+    "start = np.array_split(sobol_sequence, n_points)\n"
    ]
   },
   {
